Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
igt@gem_mmap_offset@clear - incomplete - page dumped because: VM_BUG_ON_PAGE(PageCompound(page))
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_10571/shard-rkl-2/igt@gem_mmap_offset@clear.html
Err
Starting subtest: clear
Received signal SIGQUIT.
Stack trace:
Dmesg
<6> [222.799302] [IGT] gem_mmap_offset: executing
<6> [222.803029] [IGT] gem_mmap_offset: starting subtest clear
<4> [234.272006] page:ffffea0005d10000 refcount:513 mapcount:0 mapping:ffff88810b821500 index:0x1a200 pfn:0x174400
<4> [234.272061] head:ffffea0005d10000 order:9 compound_mapcount:0 compound_pincount:0
<4> [234.272063] memcg:ffff88810086a000
<4> [234.272064] aops:shmem_aops ino:3c13c dentry name:"i915"
<4> [234.272069] flags: 0x80000000000d0077(locked|referenced|uptodate|lru|active|workingset|head|reclaim|swapbacked|zone=2)
<4> [234.272072] raw: 80000000000d0077 ffffea0004365e08 ffffea0005d18008 ffff88810b821500
<4> [234.272074] raw: 000000000001a200 0000000000000000 00000201ffffffff ffff88810086a000
<4> [234.272075] page dumped because: VM_BUG_ON_PAGE(PageCompound(page))
<4> [234.272079] ------------[ cut here ]------------
<2> [234.272080] kernel BUG at mm/shmem.c:1341!
<4> [234.272150] invalid opcode: 0000 [#1] PREEMPT SMP NOPTI
<4> [234.272154] CPU: 1 PID: 151 Comm: kswapd0 Not tainted 5.14.0-CI-CI_DRM_10571+ #1
<4> [234.272157] Hardware name: Intel Corporation Rocket Lake Client Platform/RocketLake S UDIMM 6L RVP, BIOS RKLSFWI1.R00.2321.A00.2108022338 08/02/2021
<4> [234.272161] RIP: 0010:shmem_writepage+0x2a/0x3f0
<4> [234.272166] Code: 41 57 41 56 41 55 41 54 55 53 48 89 fb 48 83 ec 10 48 8b 07 a9 00 00 01 00 74 11 48 c7 c6 58 3e 30 82 48 89 df e8 26 b8 01 00 <0f> 0b 48 8b 6f 08 83 e5 01 75 e6 48 8b 57 08 48 8d 42 ff 83 e2 01
<4> [234.272172] RSP: 0000:ffffc90001133a48 EFLAGS: 00010246
<4> [234.272175] RAX: 0000000000000037 RBX: ffffea0005d10000 RCX: 0000000000000001
<4> [234.272178] RDX: 0000000000000000 RSI: ffffffff8230d64d RDI: 00000000ffffffff
<4> [234.272181] RBP: 000000000001a200 R08: 0000000000000001 R09: 0000000000000001
<4> [234.272183] R10: 0000000000000001 R11: ffffc90001133868 R12: ffff88811f980040
<4> [234.272186] R13: ffff88810b821500 R14: ffffc90001133ba0 R15: ffff88811f980688
<4> [234.272189] FS: 0000000000000000(0000) GS:ffff88844f280000(0000) knlGS:0000000000000000
<4> [234.272192] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [234.272194] CR2: 00007fb45ea1ac00 CR3: 0000000006612006 CR4: 0000000000770ee0
<4> [234.272197] PKRU: 55555554
<4> [234.272198] Call Trace:
<4> [234.272200] ? clear_page_dirty_for_io+0x19/0x370
<4> [234.272204] shmem_writeback+0xef/0x270 [i915]
<4> [234.272287] i915_gem_shrink+0x7ef/0x880 [i915]
<4> [234.272351] ? _raw_spin_unlock_irqrestore+0x3d/0x60
<4> [234.272355] i915_gem_shrinker_scan+0xa9/0xc0 [i915]
<4> [234.272414] do_shrink_slab+0x119/0x3f0
<4> [234.272418] shrink_slab+0xa4/0x2c0
<4> [234.272420] shrink_node+0x252/0x6f0
<4> [234.272423] balance_pgdat+0x2f2/0x620
<4> [234.272427] kswapd+0x221/0x4f0
<4> [234.272429] ? finish_wait+0x80/0x80
<4> [234.272433] ? balance_pgdat+0x620/0x620
<4> [234.272435] kthread+0x13b/0x170
<4> [234.272438] ? set_kthread_struct+0x40/0x40
<4> [234.272441] ret_from_fork+0x1f/0x30
<4> [234.272445] Modules linked in: vgem amdgpu drm_ttm_helper gpu_sched snd_hda_codec_hdmi snd_hda_codec_realtek snd_hda_codec_generic ledtrig_audio i915 mei_hdcp smsc75xx usbnet mii x86_pkg_temp_thermal coretemp snd_hda_intel crct10dif_pclmul snd_intel_dspcfg crc32_pclmul snd_hda_codec ghash_clmulni_intel snd_hwdep snd_hda_core igc mei_me e1000e snd_pcm mei ttm ptp prime_numbers pps_core intel_lpss_pci
<4> [234.272469] ---[ end trace 6a2c35a665596785 ]---
<3> [234.276071] BUG: sleeping function called from invalid context at kernel/sched/completion.c:101
<3> [234.276076] in_atomic(): 0, irqs_disabled(): 0, non_block: 0, pid: 151, name: kswapd0
<4> [234.276079] INFO: lockdep is turned off.
<3> [234.276081] Preemption disabled at:
<3> [234.276081] [<0000000000000000>] 0x0
<4> [234.276085] CPU: 1 PID: 151 Comm: kswapd0 Tainted: G D 5.14.0-CI-CI_DRM_10571+ #1
<4> [234.276089] Hardware name: Intel Corporation Rocket Lake Client Platform/RocketLake S UDIMM 6L RVP, BIOS RKLSFWI1.R00.2321.A00.2108022338 08/02/2021
<4> [234.276093] Call Trace:
<4> [234.276095] dump_stack_lvl+0x56/0x7b
<4> [234.276099] ___might_sleep.cold.161+0xf2/0x106
<4> [234.276103] wait_for_completion+0x34/0x110